--- a/src/ui/day-view/preview.html
+++ b/src/ui/day-view/preview.html
@@ -1146,14 +1146,14 @@
 
     function formatOverlapDuration(minutes) {
       if (minutes < 60) {
-        return `${minutes}m overlap`;
+        return `${minutes} min`;
       }
       const hours = Math.floor(minutes / 60);
       const mins = minutes % 60;
       if (mins === 0) {
-        return `${hours}h overlap`;
+        return `${hours} hr`;
       }
-      return `${hours}h ${mins}m overlap`;
+      return `${hours} hr ${mins} min`;
     }
 
     // Duration and proportional height helpers
@@ -1301,6 +1301,12 @@
 
       overlapRow.appendChild(overlapBars);
 
+      // Overlap duration label (positioned after bars for prominence)
+      const overlapLabel = document.createElement('div');
+      overlapLabel.className = 'overlap-label';
+      overlapLabel.textContent = formatOverlapDuration(overlapMinutes);
+      overlapRow.appendChild(overlapLabel);
+
       // Event B time column
       const timeColB = document.createElement('div');
       timeColB.className = 'event-time-col';
@@ -1336,12 +1342,6 @@
         detailsB.appendChild(locB);
       }
       overlapRow.appendChild(detailsB);
-
-      // Overlap duration label
-      const overlapLabel = document.createElement('div');
-      overlapLabel.className = 'overlap-label';
-      overlapLabel.textContent = formatOverlapDuration(overlapMinutes);
-      overlapRow.appendChild(overlapLabel);
 
       if (eventB.id === focusEventId) overlapRow.classList.add('focused');
       group.appendChild(overlapRow);
