fix: apply loading shimmer class in initial HTML for MCP apps
The shimmer animation wasn't visible in Claude Code because ontoolinput
doesn't fire for the initial tool call when the app connects after the
tool is already executing. Also adds loading state toggle to preview.

--- a/src/ui/day-view/day-view.html
+++ b/src/ui/day-view/day-view.html
@@ -12,7 +12,7 @@
     <div id="day-view-container">
       <div id="day-view-header" class="day-view-header">
         <div class="day-view-title-row">
-          <h2 id="date-heading">Loading...</h2>
+          <h2 id="date-heading" class="loading-shimmer">Loading...</h2>
           <a id="day-link" href="#" target="_blank" class="open-calendar-btn" style="display: none;">Open in Calendar</a>
         </div>
         <div id="calendar-legend-container"></div>
