--- a/src/ui/day-view/day-view.html
+++ b/src/ui/day-view/day-view.html
@@ -14,6 +14,14 @@
         <div class="day-view-title-row">
           <h2 id="date-heading" class="loading-shimmer">Loading...</h2>
           <div class="header-actions">
+            <button id="day-fullscreen-btn" class="display-mode-btn" title="Toggle fullscreen" style="display: none;" aria-label="Toggle fullscreen">
+              <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                <polyline points="15 3 21 3 21 9"></polyline>
+                <polyline points="9 21 3 21 3 15"></polyline>
+                <line x1="21" y1="3" x2="14" y2="10"></line>
+                <line x1="3" y1="21" x2="10" y2="14"></line>
+              </svg>
+            </button>
             <button id="day-refresh-btn" class="refresh-btn" title="Refresh events" style="display: none;" aria-label="Refresh events">
               <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                 <polyline points="23 4 23 10 17 10"></polyline>
@@ -47,6 +55,14 @@
         <div class="multi-day-title-row">
           <h2 id="multi-day-heading">Events</h2>
           <div class="header-actions">
+            <button id="multi-day-fullscreen-btn" class="display-mode-btn" title="Toggle fullscreen" style="display: none;" aria-label="Toggle fullscreen">
+              <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                <polyline points="15 3 21 3 21 9"></polyline>
+                <polyline points="9 21 3 21 3 15"></polyline>
+                <line x1="21" y1="3" x2="14" y2="10"></line>
+                <line x1="3" y1="21" x2="10" y2="14"></line>
+              </svg>
+            </button>
             <button id="multi-day-refresh-btn" class="refresh-btn" title="Refresh events" style="display: none;" aria-label="Refresh events">
               <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                 <polyline points="23 4 23 10 17 10"></polyline>
