--- a/src/ui/day-view/day-view.html
+++ b/src/ui/day-view/day-view.html
@@ -85,7 +85,12 @@
   <div id="event-detail-overlay" class="event-detail-overlay" style="display: none;">
     <div class="event-detail-backdrop"></div>
     <div class="event-detail-card" role="dialog" aria-modal="true" aria-label="Event details">
-      <button class="event-detail-close" aria-label="Close">&times;</button>
+      <button class="event-detail-close" aria-label="Close">
+        <svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round">
+          <line x1="18" y1="6" x2="6" y2="18"></line>
+          <line x1="6" y1="6" x2="18" y2="18"></line>
+        </svg>
+      </button>
       <div id="event-detail-content"></div>
     </div>
   </div>
