Remove PII from preview data and soften time grid borders

--- a/src/ui/day-view/preview.html
+++ b/src/ui/day-view/preview.html
@@ -259,7 +259,7 @@
       // Meeting with Emily: 10:00 AM - 10:25 AM
       events.push({
         id: 'event-meeting-emily',
-        summary: 'Meeting with Emily Spady and Stephanie Moulton-Peters',
+        summary: 'Design Review with Product Team',
         start: `${dateStr}T10:00:00`,
         end: `${dateStr}T10:25:00`,
         isAllDay: false,
@@ -299,7 +299,7 @@
       // Meet with Jen: 1:30 PM - 2:30 PM (work, overlaps with block)
       events.push({
         id: 'overlap-jen',
-        summary: 'Meet with Jen at DO',
+        summary: 'Coffee chat at cafe',
         start: `${dateStr}T13:30:00`,
         end: `${dateStr}T14:30:00`,
         isAllDay: false,
