Replace text calendar link with Google Calendar icon button, always fetch cross-calendar events

--- a/src/ui/day-view/day-view.html
+++ b/src/ui/day-view/day-view.html
@@ -29,7 +29,7 @@
                 <path d="M3.51 9a9 9 0 0 1 14.85-3.36L23 10M1 14l4.64 4.36A9 9 0 0 0 20.49 15"></path>
               </svg>
             </button>
-            <a id="day-link" href="#" target="_blank" class="open-calendar-btn" style="display: none;">Open in Calendar</a>
+            <a id="day-link" href="#" target="_blank" class="open-calendar-btn" style="display: none;" title="Open in Google Calendar"><svg class="gcal-icon" width="16" height="16" viewBox="0 0 200 200" fill="none" xmlns="http://www.w3.org/2000/svg"><rect x="10" y="10" width="180" height="180" rx="24" fill="#4285F4"/><rect x="24" y="0" width="152" height="40" rx="0" fill="#4285F4"/><rect x="40" y="56" width="120" height="120" rx="4" fill="#fff"/><path d="M160 176h16c13.3 0 24-10.7 24-24v-16L160 176z" fill="#EA4335"/><rect x="0" y="136" width="200" height="64" rx="0" fill="#0B8043" style="clip-path:inset(0 0 0 0 round 0 0 24px 24px)"/><rect x="136" y="0" width="64" height="200" rx="0" fill="#F4B400" style="clip-path:inset(0 24px 0 0 round 0 24px 0 0)"/><rect x="136" y="136" width="64" height="64" fill="#0B8043"/><path d="M160 176h16c13.3 0 24-10.7 24-24v-16L160 176z" fill="#EA4335"/><rect x="40" y="56" width="120" height="120" rx="4" fill="#fff"/><text x="100" y="138" text-anchor="middle" font-family="Google Sans,Roboto,Arial,sans-serif" font-size="80" font-weight="500" fill="#4285F4">31</text></svg></a>
           </div>
         </div>
         <div id="calendar-legend-container"></div>
@@ -70,7 +70,7 @@
                 <path d="M3.51 9a9 9 0 0 1 14.85-3.36L23 10M1 14l4.64 4.36A9 9 0 0 0 20.49 15"></path>
               </svg>
             </button>
-            <a id="multi-day-link" href="#" target="_blank" class="open-calendar-btn">Open in Calendar</a>
+            <a id="multi-day-link" href="#" target="_blank" class="open-calendar-btn" title="Open in Google Calendar"><svg class="gcal-icon" width="16" height="16" viewBox="0 0 200 200" fill="none" xmlns="http://www.w3.org/2000/svg"><rect x="10" y="10" width="180" height="180" rx="24" fill="#4285F4"/><rect x="24" y="0" width="152" height="40" rx="0" fill="#4285F4"/><rect x="40" y="56" width="120" height="120" rx="4" fill="#fff"/><path d="M160 176h16c13.3 0 24-10.7 24-24v-16L160 176z" fill="#EA4335"/><rect x="0" y="136" width="200" height="64" rx="0" fill="#0B8043" style="clip-path:inset(0 0 0 0 round 0 0 24px 24px)"/><rect x="136" y="0" width="64" height="200" rx="0" fill="#F4B400" style="clip-path:inset(0 24px 0 0 round 0 24px 0 0)"/><rect x="136" y="136" width="64" height="64" fill="#0B8043"/><path d="M160 176h16c13.3 0 24-10.7 24-24v-16L160 176z" fill="#EA4335"/><rect x="40" y="56" width="120" height="120" rx="4" fill="#fff"/><text x="100" y="138" text-anchor="middle" font-family="Google Sans,Roboto,Arial,sans-serif" font-size="80" font-weight="500" fill="#4285F4">31</text></svg></a>
           </div>
         </div>
         <div id="multi-day-subheading" class="multi-day-subheading"></div>
